# TinySoft

./: .env.example  .gitignore  DEV_ENVIRONMENT.md  Dockerfile  K8S_SETUP.md  Makefile  PROGRESS.md  README.md  SETUP.md  docker-compose.local.yml  pyproject.toml
.github/workflows/: ci.yaml
apps/frontend/: README.md  package-lock.json  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/api/: auth.ts  client.ts  memos.ts
apps/frontend/src/components/: Dashboard.tsx  Login.tsx  ProtectedRoute.tsx  ResumeEditor.tsx  Signup.tsx  VoiceRecorder.tsx
apps/frontend/src/context/: AuthContextProvider.tsx  auth.ts
apps/frontend/src/hooks/: useAuth.ts
apps/k8s-manifests/: README.md  minio-deployment.yaml  postgres-deployment.yaml  voiceresumeapp-configmap.yaml  voiceresumeapp-deployment.yaml  voiceresumeapp-ingress.yaml  voiceresumeapp-service.yaml
apps/voiceresumeapp/: main.py  requirements.txt
apps/voiceresumeapp/tests/: conftest.py  test_auth.py
scripts/: setup-local-dev.sh  validate-k8s.sh
