[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceresumeai"
version = "0.1.0"
description = "VoiceResume SaaS - Voice memos to resume generation"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["platform_auth", "platform_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
